fixed jumping buttons and invisible but clickable reset #526

--- a/visualization/app/codeCharta/ui/ribbonBar/ribbonBar.component.scss
+++ b/visualization/app/codeCharta/ui/ribbonBar/ribbonBar.component.scss
@@ -147,13 +147,18 @@ ribbon-bar-component {
 				vertical-align: top;
 
 				reset-settings-button-component .md-button {
-					top: ($heightExpanded - 45) + px;
+					top: 0 + px;
 					right: -5px;
 					opacity: 0;
+					height: 0px;
+					pointer-events: none;
 
 					&.expanded {
+						top: ($heightExpanded - 45) + px;
 						opacity: 1;
-						transition: opacity 1s ease-in;
+						height: 20px;
+						transition: all 0.5s ease;
+						pointer-events: all;
 					}
 				}
 
