--- a/visualization/app/codeCharta/ui/searchPanelModeSelector/searchPanelModeSelector.component.scss
+++ b/visualization/app/codeCharta/ui/searchPanelModeSelector/searchPanelModeSelector.component.scss
@@ -1,11 +1,11 @@
-search-panel-mode-selector-component { 
-    float: left;
+search-panel-mode-selector-component {
+	float: left;
 
-    .mode-chooser {
+	.mode-chooser {
 		display: inline-block;
 		margin-right: 10px;
-        margin-bottom: 3px;
-        font-size: 0px;
+		margin-bottom: 3px;
+		font-size: 0px;
 	}
 
 	.md-button {
@@ -18,7 +18,7 @@ search-panel-mode-selector-component {
 		padding: 0px !important;
 		font-size: 9pt;
 		text-transform: none;
-        background-color: rgba(230, 230, 230, 0.96);
+		background-color: rgba(230, 230, 230, 0.96);
 
 		&.left {
 			border-radius: 5px 0 0 5px;
@@ -26,8 +26,8 @@ search-panel-mode-selector-component {
 
 		&.middle {
 			border-radius: 0;
-			border-left: 1px solid rgba(255, 255, 255, 1.00);
-			border-right: 1px solid rgba(255, 255, 255, 1.00);
+			border-left: 1px solid rgba(255, 255, 255, 1);
+			border-right: 1px solid rgba(255, 255, 255, 1);
 		}
 
 		&.right {
@@ -43,19 +43,19 @@ search-panel-mode-selector-component {
 			background-color: rgb(0, 150, 136);
 		}
 
-		:active {
-            margin: inherit;
-            padding: inherit;
-        }
-        
-        i {
-            vertical-align: middle;
-            margin-top: -10px;
-            height:16px;
-        }
+		.i:active {
+			margin: inherit;
+			padding: inherit;
+		}
+
+		i {
+			vertical-align: middle;
+			margin-top: -10px;
+			height: 16px;
+		}
 	}
 
-	.list-length-count{
+	.list-length-count {
 		position: fixed;
 		margin-left: 18px;
 		margin-top: -32px;
@@ -64,5 +64,4 @@ search-panel-mode-selector-component {
 		width: 5px;
 		height: 5px;
 	}
-
 }
